fix and also wrote test cases